loopdowhile.Poucet1.scala.code

do{}

while( sortieTrouvee()!=true){
  
  for( i <- 1 to 5){
    
   
  }
  
  
  
  
  
  
}



avance();
